syntax = "proto3";

package auth;
option go_package = "auth-haven/pkg/proto";

import "common/Tokens.proto";

service InviteService{
  rpc InviteEmployee(InviteEmployeeRequest) returns (InviteToken);
  rpc AcceptInvite(AcceptInviteRequest) returns (Tokens);
}

message InviteEmployeeRequest {
  string tenant_id = 1;
  string email = 2;
  int32 role_id = 5; // maps to roles table
}

message InviteToken {
  string invitation_token = 1;
}

message AcceptInviteRequest {
  string invitation_token = 1;
  string password = 2;
  string full_name = 3;
}