syntax = "proto3";

package auth;
option go_package = "auth-haven/pkg/proto";

import "common/Tokens.proto";  // <-- import the file that has Tokens

service UserService {
  rpc CreatePersonalUser(CreatePersonalUserRequest) returns (Tokens);
  rpc CreateCompanyAndOwner(CreateCompanyAndOwnerRequest) returns (Tokens);
}

message CreatePersonalUserRequest {
  string email = 1;
  string password = 2;
  string full_name = 3;
}

message CreateCompanyAndOwnerRequest {
  string company_name = 1;
  string company_domain = 2;
  string owner_email = 3;
  string owner_password = 4;
  string owner_full_name = 5;
}