syntax = "proto3";

package auth;
option go_package = "auth-haven/pkg/proto/common";

message Tokens {
  string access_token = 1;
  string refresh_token = 2;
}